methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:-9: error: not found: value isFacingTrail
			if (isFacingTrail()) {
                            ^SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
    backward()
            ^SlugTracking:2: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime37.SlugTracking'
override def run() {
             ^